// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui actions Action Creators Board Menu creates a HIDE_BOARD_MENU action 1`] = `
Object {
  "type": "HIDE_BOARD_MENU",
}
`;

exports[`ui actions Action Creators Board Menu creates a SHOW_BOARD_MENU action 1`] = `
Object {
  "type": "SHOW_BOARD_MENU",
}
`;

exports[`ui actions Action Creators Boards Explorer creates a HIDE_BOARDS_EXPLORER action 1`] = `
Object {
  "type": "HIDE_BOARDS_EXPLORER",
}
`;

exports[`ui actions Action Creators Boards Explorer creates a SHOW_BOARDS_EXPLORER action 1`] = `
Object {
  "type": "SHOW_BOARDS_EXPLORER",
}
`;

exports[`ui actions Action Creators Header Search creates a BLUR_HEADER_SEARCH action 1`] = `
Object {
  "type": "BLUR_HEADER_SEARCH",
}
`;

exports[`ui actions Action Creators Header Search creates a FOCUS_HEADER_SEARCH action 1`] = `
Object {
  "type": "FOCUS_HEADER_SEARCH",
}
`;

exports[`ui actions Action Creators UI Errors creates a RESET_UI_ERROR action 1`] = `
Object {
  "type": "RESET_UI_ERROR",
}
`;

exports[`ui actions Action Creators UI Errors creates a SET_UI_ERROR action 1`] = `
Object {
  "error": Object {
    "header": "Verify email!",
    "kind": "invalidEmail",
    "message": "That doesn't look like an email address…",
  },
  "type": "SET_UI_ERROR",
}
`;
